a little modify for annotation